--- a/index.html
+++ b/index.html
@@ -1,87 +1,280 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>Track Your Ticket</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-    body { font-family: Arial; background:#f6f7fb; padding:20px }
-    .card { background:#fff; padding:20px; border-radius:10px; max-width:500px; margin:auto }
-    .status { font-weight:bold; padding:6px 12px; border-radius:6px; display:inline-block }
-    .OPEN { background:#ffe08a }
-    .IN_PROGRESS { background:#7dd3fc }
-    .CLOSED { background:#86efac }
-    .err { color:#b91c1c; font-weight:700 }
-    input { padding:10px; width:100%; border-radius:8px; border:1px solid #ddd; margin:10px 0 }
-    button { padding:10px 14px; border:0; border-radius:8px; cursor:pointer }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Ticket Tracker</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
 
-<div class="card">
-  <h2>Ticket Tracking</h2>
+<body class="bg-slate-50 min-h-screen">
+  <div class="max-w-3xl mx-auto p-4 sm:p-8">
+    <div class="flex items-center justify-between mb-6">
+      <div>
+        <h1 class="text-2xl sm:text-3xl font-bold text-slate-900">Ticket Tracking</h1>
+        <p class="text-slate-600 text-sm">Track status and support replies using your ticket code.</p>
+      </div>
+      <button id="changeBtn"
+        class="hidden sm:inline-flex px-4 py-2 rounded-xl bg-slate-900 text-white hover:bg-slate-800">
+        Change code
+      </button>
+    </div>
 
-  <div id="formBox">
-    <label>Ticket Code</label>
-    <input id="codeInput" placeholder="e.g. 559" />
-    <button onclick="go()">Track</button>
+    <!-- Input Card -->
+    <div id="inputCard" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-5">
+      <label class="block text-sm font-semibold text-slate-700 mb-2">Enter Ticket Code</label>
+      <div class="flex gap-2">
+        <input id="codeInput"
+          class="flex-1 px-4 py-3 rounded-xl border border-slate-200 focus:outline-none focus:ring-2 focus:ring-slate-900"
+          placeholder="e.g. 559" />
+        <button id="trackBtn"
+          class="px-5 py-3 rounded-xl bg-slate-900 text-white hover:bg-slate-800">
+          Track
+        </button>
+      </div>
+      <p class="text-xs text-slate-500 mt-2">Tip: you can also open a direct link like <span class="font-mono">?code=559</span></p>
+    </div>
+
+    <!-- Result Card -->
+    <div id="resultWrap" class="hidden mt-6 space-y-4">
+      <div class="bg-white rounded-2xl shadow-sm border border-slate-200 p-5">
+        <div class="flex flex-wrap items-center justify-between gap-3">
+          <div>
+            <div class="text-sm text-slate-500">Ticket Code</div>
+            <div id="codeText" class="text-xl font-bold text-slate-900"></div>
+          </div>
+
+          <div class="flex items-center gap-2">
+            <span id="statusPill" class="px-3 py-1 rounded-full text-sm font-semibold border">-</span>
+            <button id="refreshBtn" class="px-3 py-2 rounded-xl border border-slate-200 hover:bg-slate-50">
+              Refresh
+            </button>
+          </div>
+        </div>
+
+        <div class="grid sm:grid-cols-2 gap-4 mt-4">
+          <div>
+            <div class="text-sm text-slate-500">Subject</div>
+            <div id="subjectText" class="font-semibold text-slate-900">-</div>
+          </div>
+          <div>
+            <div class="text-sm text-slate-500">Priority</div>
+            <div id="priorityText" class="font-semibold text-slate-900">-</div>
+          </div>
+          <div>
+            <div class="text-sm text-slate-500">Created</div>
+            <div id="createdText" class="font-semibold text-slate-900">-</div>
+          </div>
+          <div>
+            <div class="text-sm text-slate-500">Last Updated</div>
+            <div id="updatedText" class="font-semibold text-slate-900">-</div>
+          </div>
+        </div>
+
+        <div class="mt-4">
+          <div class="text-sm text-slate-500">Description</div>
+          <div id="descText" class="mt-1 text-slate-800 whitespace-pre-wrap"></div>
+        </div>
+
+        <div id="errBox" class="hidden mt-4 p-3 rounded-xl bg-red-50 border border-red-200 text-red-700 text-sm"></div>
+        <div class="mt-3 text-xs text-slate-500">
+          Auto refresh: every <span class="font-semibold">20s</span>
+          <span class="mx-2">•</span>
+          Last checked: <span id="checkedAt">-</span>
+        </div>
+      </div>
+
+      <!-- Replies -->
+      <div class="bg-white rounded-2xl shadow-sm border border-slate-200 p-5">
+        <div class="flex items-center justify-between">
+          <h2 class="text-lg font-bold text-slate-900">Replies</h2>
+          <span id="replyCount" class="text-sm text-slate-500">0</span>
+        </div>
+
+        <div id="threadBox" class="mt-4 space-y-3"></div>
+
+        <div id="noThread" class="hidden mt-4 text-slate-500 text-sm">
+          No replies yet. Please wait — support will update this ticket.
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div id="resultBox" style="display:none">
-    <p><b>Code:</b> <span id="code"></span></p>
-    <p><b>Status:</b> <span id="status" class="status"></span></p>
-    <p><b>Subject:</b> <span id="subject"></span></p>
-    <p><b>Last Updated:</b> <span id="updated"></span></p>
-    <p id="err" class="err"></p>
-  </div>
-</div>
 
 <script>
-  // ✅ PUT YOUR APPS SCRIPT WEB APP URL HERE
-  const API = "https://script.google.com/macros/s/AKfycbxv-R_AQgWw5Rp9XUWGASxwVo0rqJ6zhPOKvX2_7tc7DPQKmxJopnxUOKB21dP1eyRA/exec";
+  // ✅ Put your Apps Script Web App URL here:
+  const API = "https://script.google.com/macros/s/AKfycbzhAgCkoZao-AfzfdsIyVD0fEvsxqamUveAin-LfKO6jsdzn4asR7vTa0cMc8qjXhweMQ/exec";
+  const AUTO_REFRESH_MS = 20000;
 
-  function getParam(name){
-    return new URLSearchParams(window.location.search).get(name);
+  const els = {
+    inputCard: document.getElementById("inputCard"),
+    resultWrap: document.getElementById("resultWrap"),
+    codeInput: document.getElementById("codeInput"),
+    trackBtn: document.getElementById("trackBtn"),
+    changeBtn: document.getElementById("changeBtn"),
+    refreshBtn: document.getElementById("refreshBtn"),
+    codeText: document.getElementById("codeText"),
+    subjectText: document.getElementById("subjectText"),
+    priorityText: document.getElementById("priorityText"),
+    createdText: document.getElementById("createdText"),
+    updatedText: document.getElementById("updatedText"),
+    descText: document.getElementById("descText"),
+    statusPill: document.getElementById("statusPill"),
+    errBox: document.getElementById("errBox"),
+    checkedAt: document.getElementById("checkedAt"),
+    threadBox: document.getElementById("threadBox"),
+    noThread: document.getElementById("noThread"),
+    replyCount: document.getElementById("replyCount"),
+  };
+
+  function qp(name){ return new URLSearchParams(location.search).get(name); }
+
+  function goTrack(code){
+    const path = location.pathname.endsWith("/") ? location.pathname : (location.pathname + "/").replace("//","/");
+    location.href = path + "?code=" + encodeURIComponent(code);
   }
 
-  function go(){
-    const c = document.getElementById("codeInput").value.trim();
-    if(!c) return;
-    location.href = location.pathname + "?code=" + encodeURIComponent(c);
+  function fmtDate(iso){
+    if (!iso) return "-";
+    try { return new Date(iso).toLocaleString(); } catch { return iso; }
   }
 
-  async function load(){
-    const code = getParam("code");
-    if(!code) return;
+  function setStatus(status){
+    const s = String(status || "-").toUpperCase();
+    els.statusPill.textContent = s;
 
-    document.getElementById("formBox").style.display = "none";
-    document.getElementById("resultBox").style.display = "block";
-    document.getElementById("code").innerText = code;
+    // reset
+    els.statusPill.className = "px-3 py-1 rounded-full text-sm font-semibold border";
 
-    try{
-      const r = await fetch(API + "?code=" + encodeURIComponent(code));
-      const d = await r.json();
-
-      if(!d.success){
-        document.getElementById("err").innerText = d.message || "Ticket not found";
-        return;
-      }
-
-      document.getElementById("status").innerText = d.ticket.status;
-      document.getElementById("status").className = "status " + d.ticket.status;
-      document.getElementById("subject").innerText = d.ticket.subject || "-";
-      document.getElementById("updated").innerText =
-        d.ticket.updated_at ? new Date(d.ticket.updated_at).toLocaleString() : "-";
-
-      // Auto refresh every 20s
-      setTimeout(() => location.reload(), 20000);
-
-    }catch(e){
-      document.getElementById("err").innerText = "Error loading ticket. Try again.";
+    if (s === "OPEN") {
+      els.statusPill.classList.add("bg-amber-50","text-amber-800","border-amber-200");
+    } else if (s === "IN_PROGRESS") {
+      els.statusPill.classList.add("bg-sky-50","text-sky-800","border-sky-200");
+    } else if (s === "CLOSED" || s === "RESOLVED") {
+      els.statusPill.classList.add("bg-emerald-50","text-emerald-800","border-emerald-200");
+    } else {
+      els.statusPill.classList.add("bg-slate-50","text-slate-700","border-slate-200");
     }
   }
 
-  load();
-</script>
+  function showError(msg){
+    els.errBox.textContent = msg;
+    els.errBox.classList.remove("hidden");
+  }
+  function clearError(){
+    els.errBox.classList.add("hidden");
+    els.errBox.textContent = "";
+  }
 
+  function renderThread(items){
+    els.threadBox.innerHTML = "";
+    const list = Array.isArray(items) ? items : [];
+    els.replyCount.textContent = `${list.length}`;
+
+    if (!list.length) {
+      els.noThread.classList.remove("hidden");
+      return;
+    }
+    els.noThread.classList.add("hidden");
+
+    // newest last
+    list.slice().reverse().forEach(m => {
+      const role = (m.role || "").toLowerCase();
+      const badge =
+        role === "customer" ? "bg-slate-100 text-slate-700" :
+        role === "agent" ? "bg-indigo-50 text-indigo-800" :
+        role === "bot" ? "bg-purple-50 text-purple-800" :
+        "bg-emerald-50 text-emerald-800";
+
+      const card = document.createElement("div");
+      card.className = "rounded-xl border border-slate-200 p-4";
+
+      card.innerHTML = `
+        <div class="flex flex-wrap items-center justify-between gap-2 mb-2">
+          <div class="flex items-center gap-2">
+            <span class="px-2 py-0.5 rounded-full text-xs font-semibold ${badge}">
+              ${(role || "support").toUpperCase()}
+            </span>
+            <span class="text-sm font-semibold text-slate-900">${escapeHtml(m.from || "Support")}</span>
+          </div>
+          <div class="text-xs text-slate-500">${escapeHtml(fmtDate(m.at))}</div>
+        </div>
+        <div class="text-slate-800 whitespace-pre-wrap">${escapeHtml(m.text || "")}</div>
+      `;
+      els.threadBox.appendChild(card);
+    });
+  }
+
+  function escapeHtml(str){
+    return String(str)
+      .replaceAll("&","&amp;")
+      .replaceAll("<","&lt;")
+      .replaceAll(">","&gt;")
+      .replaceAll('"',"&quot;")
+      .replaceAll("'","&#039;");
+  }
+
+  async function load(){
+    const code = (qp("code") || "").trim();
+
+    if (!code) {
+      els.inputCard.classList.remove("hidden");
+      els.resultWrap.classList.add("hidden");
+      els.changeBtn.classList.add("hidden");
+      return;
+    }
+
+    els.inputCard.classList.add("hidden");
+    els.resultWrap.classList.remove("hidden");
+    els.changeBtn.classList.remove("hidden");
+    els.codeText.textContent = code;
+
+    clearError();
+    els.checkedAt.textContent = new Date().toLocaleTimeString();
+
+    try{
+      const res = await fetch(API + "?code=" + encodeURIComponent(code));
+      const data = await res.json();
+
+      if (!data.success){
+        showError(data.message || "Ticket not found");
+        return;
+      }
+
+      const t = data.ticket || {};
+      setStatus(t.status);
+      els.subjectText.textContent = t.subject || "-";
+      els.priorityText.textContent = t.priority || "-";
+      els.createdText.textContent = fmtDate(t.created_at);
+      els.updatedText.textContent = fmtDate(t.updated_at);
+      els.descText.textContent = t.description || "-";
+
+      renderThread(data.thread || []);
+
+    } catch(e){
+      showError("Error loading ticket. Please try again.");
+    }
+  }
+
+  // Events
+  els.trackBtn.addEventListener("click", () => {
+    const c = els.codeInput.value.trim();
+    if (!c) return;
+    goTrack(c);
+  });
+
+  els.codeInput.addEventListener("keydown", (e) => {
+    if (e.key === "Enter") els.trackBtn.click();
+  });
+
+  els.changeBtn.addEventListener("click", () => {
+    location.href = location.pathname; // clears query
+  });
+
+  els.refreshBtn.addEventListener("click", () => load());
+
+  // First load + auto refresh
+  load();
+  setInterval(() => load(), AUTO_REFRESH_MS);
+</script>
 </body>
 </html>
