--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       const lang = getLang();
       const t = I18N[lang];
 
-      if (!API_BASE || API_BASE.includes("https://script.google.com/macros/s/AKfycbxZ2sndk__eO1h6CVdKqZ6kLi-mt8R8Nry5eJ2KtE59Iq5Glfpdy0JkwxxpszuYfi0Y/exec")) {
+     if (!API_BASE || API_BASE.includes("PASTE_YOUR_APPS_SCRIPT_WEBAPP_URL_HERE")) {
         showError("API_BASE not set. Paste your Apps Script Web App URL inside index.html (API_BASE).");
         return;
       }
