--- a/index.html
+++ b/index.html
@@ -15,6 +15,30 @@
     .badge { border:1px solid rgba(15,23,42,.12); }
     .skeleton { background: linear-gradient(90deg, rgba(15,23,42,.06), rgba(15,23,42,.03), rgba(15,23,42,.06)); background-size: 200% 100%; animation: sk 1.2s infinite; }
     @keyframes sk { 0%{background-position:200% 0} 100%{background-position:-200% 0} }
+
+    /* Chat bubble subtle tails (optional) */
+    .bubble-left:before{
+      content:"";
+      position:absolute;
+      left:-6px; top:16px;
+      width:12px; height:12px;
+      background: inherit;
+      border-left: inherit;
+      border-bottom: inherit;
+      transform: rotate(45deg);
+      border-radius: 2px;
+    }
+    .bubble-right:before{
+      content:"";
+      position:absolute;
+      right:-6px; top:16px;
+      width:12px; height:12px;
+      background: inherit;
+      border-right: inherit;
+      border-top: inherit;
+      transform: rotate(45deg);
+      border-radius: 2px;
+    }
   </style>
 </head>
 
@@ -158,7 +182,8 @@
         promptCode: "আপনার টিকিট কোড লিখুন:",
         invalidCode: "অবৈধ কোড। দয়া করে আবার চেষ্টা করুন।",
         ticketNotFound: "টিকিট পাওয়া যায়নি",
-        affiliateSupport: "অ্যাফিলিয়েট সাপোর্ট"
+        affiliateSupport: "অ্যাফিলিয়েট সাপোর্ট",
+        user: "আপনি"
       },
       en: {
         title: "Ticket Tracking",
@@ -180,7 +205,8 @@
         promptCode: "Enter your ticket code:",
         invalidCode: "Invalid code. Please try again.",
         ticketNotFound: "Ticket not found",
-        affiliateSupport: "Affiliate Support"
+        affiliateSupport: "Affiliate Support",
+        user: "You"
       }
     };
 
@@ -192,7 +218,6 @@
       localStorage.setItem("tt_lang", lang);
       applyLang(lang);
       styleLangButtons(lang);
-      // also re-render empty label text instantly
       const empty = document.getElementById("repliesEmpty");
       if (!empty.classList.contains("hidden")) empty.textContent = I18N[lang].noReplies;
     }
@@ -243,6 +268,7 @@
            .replaceAll("&gt;", ">")
            .replaceAll("&quot;", '"')
            .replaceAll("&#39;", "'");
+      // strip html tags (we want clean text only)
       s = s.replace(/<\/?[^>]+(>|$)/g, "");
       s = s.replace(/\s+/g, " ").trim();
       return s;
@@ -277,11 +303,9 @@
     }
 
     /***********************
-     * IMPORTANT FIX ✅
-     * Replies can be in many places depending on script response.
+     * Replies extraction (robust)
      ***********************/
     function extractReplies(payload) {
-      // Try all possible locations
       const candidates = [
         payload?.ticket?.thread,
         payload?.ticket?.messages,
@@ -295,6 +319,37 @@
         if (Array.isArray(c) && c.length) return c;
       }
       return [];
+    }
+
+    /***********************
+     * Determine message side (Support left, User right)
+     * We try best-effort using available fields.
+     ***********************/
+    function isSupportMessage(msg) {
+      // Some possible fields:
+      // msg.sender_role / msg.role / msg.user_role / msg.sender?.role
+      // msg.sender_type / msg.type
+      // If none exist: keep current behavior (treat as support).
+      const role = String(
+        msg?.sender_role ??
+        msg?.role ??
+        msg?.user_role ??
+        msg?.sender?.role ??
+        msg?.senderType ??
+        msg?.sender_type ??
+        msg?.type ??
+        ""
+      ).toLowerCase();
+
+      if (role.includes("agent") || role.includes("support") || role.includes("admin") || role.includes("staff") || role.includes("system")) return true;
+      if (role.includes("user") || role.includes("customer") || role.includes("player")) return false;
+
+      // Another common indicator: msg.is_customer / msg.isCustomer
+      if (msg?.is_customer === true || msg?.isCustomer === true) return false;
+      if (msg?.is_agent === true || msg?.isAgent === true) return true;
+
+      // Fallback: treat as support (safe default in your use-case)
+      return true;
     }
 
     /***********************
@@ -313,7 +368,6 @@
       const lang = getLang();
       const t = I18N[lang];
 
-      // ticket object can be in payload.ticket OR payload.data.ticket
       const tk = payload?.ticket || payload?.data?.ticket;
 
       if (!payload || payload.success !== true || !tk) {
@@ -365,16 +419,34 @@
       list.innerHTML = thread.map(msg => {
         const when = formatDT(msg.created_at || msg.createdAt || msg.time || msg.timestamp);
         const body = cleanMessageText(msg.message || msg.content || msg.text || msg.body || "");
-        const who = t.affiliateSupport; // always show Affiliate Support (not System)
+        const support = isSupportMessage(msg);
 
+        // Left = Support
+        if (support) {
+          return `
+            <div class="flex justify-start">
+              <div class="max-w-xl w-full sm:w-auto">
+                <div class="relative bubble-left rounded-2xl p-4 card border border-indigo-200 bg-indigo-50">
+                  <div class="text-slate-900 font-semibold break-words">${body || "—"}</div>
+                  <div class="mt-3 flex items-center gap-2 text-xs text-slate-500">
+                    <span class="badge px-2 py-0.5 rounded-full bg-white text-indigo-700 font-extrabold">${t.affiliateSupport}</span>
+                    <span class="mono">${when}</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          `;
+        }
+
+        // Right = User
         return `
           <div class="flex justify-end">
             <div class="max-w-xl w-full sm:w-auto">
-              <div class="bg-white border border-slate-200 rounded-2xl p-4 card">
-                <div class="text-slate-900 font-semibold">${body || "—"}</div>
-                <div class="mt-3 flex items-center gap-2 text-xs text-slate-500">
-                  <span class="badge px-2 py-0.5 rounded-full bg-slate-50 text-slate-700 font-bold">${who}</span>
+              <div class="relative bubble-right rounded-2xl p-4 card border border-emerald-200 bg-emerald-50">
+                <div class="text-slate-900 font-semibold break-words">${body || "—"}</div>
+                <div class="mt-3 flex items-center justify-end gap-2 text-xs text-slate-500">
                   <span class="mono">${when}</span>
+                  <span class="badge px-2 py-0.5 rounded-full bg-white text-emerald-700 font-extrabold">${t.user}</span>
                 </div>
               </div>
             </div>
@@ -392,7 +464,7 @@
       const lang = getLang();
       const t = I18N[lang];
 
-     if (!API_BASE || API_BASE.includes("PASTE_YOUR_APPS_SCRIPT_WEBAPP_URL_HERE")) {
+      if (!API_BASE || API_BASE.includes("PASTE_YOUR_APPS_SCRIPT_WEBAPP_URL_HERE")) {
         showError("API_BASE not set. Paste your Apps Script Web App URL inside index.html (API_BASE).");
         return;
       }
