--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <span id="statusPill" class="badge px-3 py-1.5 rounded-full text-xs font-bold tracking-wide uppercase text-slate-700">
             • UNKNOWN
           </span>
-          <button id="btnRefresh" class="rounded-full badge px-4 py-2 text-sm font-semibold hover:bg-slate-50 transition" data-i18n="refresh">
+          <button id="btnRefresh" class="rounded-full badge px-4 py-2 text-sm font-semibold hover:bg-slate-50 transition" data-i18n="refresh" disabled>
             Refresh
           </button>
         </div>
@@ -131,6 +131,11 @@
         </div>
 
         <div id="ticketError" class="hidden mt-4 rounded-xl border border-red-200 bg-red-50 px-4 py-3 text-sm text-red-700 font-semibold"></div>
+
+        <!-- NEW: gate message (only shows before code submit) -->
+        <div id="gateMsg" class="mt-4 rounded-xl border border-indigo-200 bg-indigo-50 px-4 py-3 text-sm text-indigo-800 font-semibold">
+          <span data-i18n="gateMsg">Please enter your ticket code to view ticket details.</span>
+        </div>
       </div>
     </div>
 
@@ -155,7 +160,7 @@
     /***********************
      * CONFIG
      ***********************/
-    const API_BASE = "https://script.google.com/macros/s/AKfycbxZ2sndk__eO1h6CVdKqZ6kLi-mt8R8Nry5eJ2KtE59Iq5Glfpdy0JkwxxpszuYfi0Y/exec"; // <-- your Apps Script web app URL
+    const API_BASE = "https://script.google.com/macros/s/AKfycbxZ2sndk__eO1h6CVdKqZ6kLi-mt8R8Nry5eJ2KtE59Iq5Glfpdy0JkwxxpszuYfi0Y/exec";
     const AUTO_REFRESH_MS = 20000;
 
     /***********************
@@ -183,7 +188,8 @@
         invalidCode: "অবৈধ কোড। দয়া করে আবার চেষ্টা করুন।",
         ticketNotFound: "টিকিট পাওয়া যায়নি",
         affiliateSupport: "অ্যাফিলিয়েট সাপোর্ট",
-        user: "আপনি"
+        user: "আপনি",
+        gateMsg: "টিকিট দেখার জন্য প্রথমে আপনার টিকিট কোড দিন।"
       },
       en: {
         title: "Ticket Tracking",
@@ -206,7 +212,8 @@
         invalidCode: "Invalid code. Please try again.",
         ticketNotFound: "Ticket not found",
         affiliateSupport: "Affiliate Support",
-        user: "You"
+        user: "You",
+        gateMsg: "Please enter your ticket code first to view the ticket."
       }
     };
 
@@ -269,15 +276,13 @@
            .replaceAll("&gt;", ">")
            .replaceAll("&quot;", '"')
            .replaceAll("&#39;", "'");
-      // strip html tags (we want clean text only)
       s = s.replace(/<\/?[^>]+(>|$)/g, "");
       s = s.replace(/\s+/g, " ").trim();
       return s;
     }
 
     /***********************
-     * NEW: Masking + slip removal for DESCRIPTION only
-     * - keeps everything else unchanged
+     * Masking + slip removal for DESCRIPTION only
      ***********************/
     function maskMiddle(str, keepStart, keepEnd) {
       const s = String(str || "");
@@ -285,7 +290,6 @@
       const a = Math.max(0, keepStart|0);
       const b = Math.max(0, keepEnd|0);
       if (s.length <= a + b) {
-        // too short: keep first char only
         return s[0] + "*".repeat(Math.max(1, s.length - 1));
       }
       return s.slice(0, a) + "*".repeat(Math.max(1, s.length - (a + b))) + s.slice(s.length - b);
@@ -298,22 +302,18 @@
       const local = m[1];
       const domain = m[2];
       if (local.length <= 2) return maskMiddle(local, 1, 0) + "@" + domain;
-      // example: m***********9@gmail.com
       const maskedLocal = local[0] + "*".repeat(Math.max(3, local.length - 2)) + local[local.length - 1];
       return maskedLocal + "@" + domain;
     }
 
     function maskPhone(phone) {
-      // keep first 2 and last 2: 01********89
       const p = String(phone || "");
       const digits = p.replace(/\D/g, "");
-      if (digits.length < 8) return p; // too short, skip
-      const masked = maskMiddle(digits, 2, 2);
-      return masked;
+      if (digits.length < 8) return p;
+      return maskMiddle(digits, 2, 2);
     }
 
     function maskUsername(u) {
-      // example: 7card -> 7***d
       const s = String(u || "").trim();
       if (!s) return s;
       if (s.length <= 2) return maskMiddle(s, 1, 0);
@@ -321,7 +321,6 @@
     }
 
     function maskRef(ref) {
-      // example: YT*******8Y (keep first 2 last 2)
       const s = String(ref || "").trim();
       if (!s) return s;
       if (s.length < 6) return maskMiddle(s, 1, 1);
@@ -329,26 +328,14 @@
     }
 
     function stripSlipParts(desc) {
-      // remove lines or segments that look like attachments/screenshots/slips/urls/base64/images
       let s = String(desc || "");
-
-      // hard remove obvious base64/data urls
       if (/data:image\/|base64,/i.test(s)) return "";
-
-      // remove URLs
       s = s.replace(/https?:\/\/\S+/gi, "");
 
-      // remove common attachment tokens
-      // if line contains these keywords -> remove the entire line/segment
-      const badWords = [
-        "slip", "screenshot", "screen shot", "ss", "attachment", "attached", "image", "photo", "png", "jpg", "jpeg", "pdf"
-      ];
-
-      // split by pipe or newlines (your descriptions are often " | " separated)
+      const badWords = ["slip","screenshot","screen shot","ss","attachment","attached","image","photo","png","jpg","jpeg","pdf"];
       const parts = s.split(/\s*\|\s*|\n+/).map(x => x.trim()).filter(Boolean);
       const filtered = parts.filter(part => {
         const low = part.toLowerCase();
-        // if contains file extensions or the bad keywords, drop it
         if (badWords.some(w => low.includes(w))) return false;
         if (/\b\w+\.(png|jpg|jpeg|pdf)\b/i.test(part)) return false;
         return true;
@@ -358,35 +345,24 @@
     }
 
     function maskSensitiveInDescription(descRaw) {
-      // 1) clean html
       let s = cleanMessageText(descRaw);
-
-      // 2) remove slip/screenshot/urls/etc
       s = stripSlipParts(s);
-
       if (!s) return "";
 
-      // 3) mask emails anywhere
       s = s.replace(/[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,}/ig, (m) => maskEmail(m));
 
-      // 4) mask phone-like digit sequences (8-16 digits; keep 2+2)
       s = s.replace(/\b(?:\+?\d[\d\s\-().]{6,}\d)\b/g, (m) => {
         const digits = m.replace(/\D/g, "");
         if (digits.length >= 8 && digits.length <= 16) return maskPhone(m);
         return m;
       });
 
-      // 5) mask labeled fields: Username / User / Email / Phone / Ref / Reference / Player No
-      // Username
       s = s.replace(/\b(username)\s*:\s*([A-Za-z0-9._-]{2,})\b/ig, (all, k, v) => `${k}: ${maskUsername(v)}`);
-      // Player No / Reference / Ref
       s = s.replace(/\b(player\s*no|player\s*number|reference\s*no|reference|ref)\s*:\s*([A-Za-z0-9]{6,})\b/ig,
         (all, k, v) => `${k}: ${maskRef(v)}`
       );
 
-      // 6) extra safety: mask any long alphanum tokens (like refs) 10-40 chars
       s = s.replace(/\b[A-Za-z0-9]{10,40}\b/g, (tok) => maskRef(tok));
-
       return s.trim();
     }
 
@@ -418,6 +394,20 @@
       el.textContent = msg;
     }
 
+    function setGate(isGated) {
+      const gate = document.getElementById("gateMsg");
+      const refresh = document.getElementById("btnRefresh");
+      if (isGated) {
+        gate.classList.remove("hidden");
+        refresh.disabled = true;
+        refresh.classList.add("opacity-50","cursor-not-allowed");
+      } else {
+        gate.classList.add("hidden");
+        refresh.disabled = false;
+        refresh.classList.remove("opacity-50","cursor-not-allowed");
+      }
+    }
+
     /***********************
      * Replies extraction (robust)
      ***********************/
@@ -439,7 +429,6 @@
 
     /***********************
      * Determine message side (Support left, User right)
-     * We try best-effort using available fields.
      ***********************/
     function isSupportMessage(msg) {
       const role = String(
@@ -463,6 +452,20 @@
     }
 
     /***********************
+     * NEW: Keep only real text replies (drop blanks like "—")
+     ***********************/
+    function getMessageBody(msg) {
+      return cleanMessageText(msg?.message || msg?.content || msg?.text || msg?.body || "");
+    }
+    function isRealText(body) {
+      const s = String(body || "").trim();
+      if (!s) return false;
+      if (s === "—" || s === "-" || s === "--" || s.toLowerCase() === "null") return false;
+      if (/^[-–—\s]+$/.test(s)) return false;
+      return true;
+    }
+
+    /***********************
      * API Calls (Apps Script)
      ***********************/
     async function apiFetchTicket(code) {
@@ -475,9 +478,6 @@
      * Render
      ***********************/
     function renderTicket(payload) {
-      const lang = getLang();
-      const t = I18N[lang];
-
       const tk = payload?.ticket || payload?.data?.ticket;
 
       if (!payload || payload.success !== true || !tk) {
@@ -500,7 +500,6 @@
       document.getElementById("updatedAt").textContent = formatDT(tk.updated_at);
       document.getElementById("closedAt").textContent = tk.closed_time ? formatDT(tk.closed_time) : "—";
 
-      // ✅ FIXED: Clean + Mask description (no <p>, and hides slip parts)
       const descMasked = maskSensitiveInDescription(tk.description || tk.note || "");
       document.getElementById("description").textContent = descMasked || "—";
 
@@ -514,12 +513,18 @@
       const lang = getLang();
       const t = I18N[lang];
 
-      document.getElementById("replyCount").textContent = String(thread.length);
+      // ✅ Filter out empty/placeholder replies
+      const cleanedThread = (Array.isArray(thread) ? thread : []).filter(msg => {
+        const body = getMessageBody(msg);
+        return isRealText(body);
+      });
+
+      document.getElementById("replyCount").textContent = String(cleanedThread.length);
 
       const empty = document.getElementById("repliesEmpty");
       const list = document.getElementById("repliesList");
 
-      if (!thread.length) {
+      if (!cleanedThread.length) {
         empty.classList.remove("hidden");
         empty.textContent = t.noReplies;
         list.classList.add("hidden");
@@ -530,9 +535,9 @@
       empty.classList.add("hidden");
       list.classList.remove("hidden");
 
-      list.innerHTML = thread.map(msg => {
+      list.innerHTML = cleanedThread.map(msg => {
         const when = formatDT(msg.created_at || msg.createdAt || msg.time || msg.timestamp);
-        const body = cleanMessageText(msg.message || msg.content || msg.text || msg.body || "");
+        const body = getMessageBody(msg);
         const support = isSupportMessage(msg);
 
         if (support) {
@@ -540,7 +545,7 @@
             <div class="flex justify-start">
               <div class="max-w-xl w-full sm:w-auto">
                 <div class="relative bubble-left rounded-2xl p-4 card border border-indigo-200 bg-indigo-50">
-                  <div class="text-slate-900 font-semibold break-words">${body || "—"}</div>
+                  <div class="text-slate-900 font-semibold break-words">${body}</div>
                   <div class="mt-3 flex items-center gap-2 text-xs text-slate-500">
                     <span class="badge px-2 py-0.5 rounded-full bg-white text-indigo-700 font-extrabold">${t.affiliateSupport}</span>
                     <span class="mono">${when}</span>
@@ -555,7 +560,7 @@
           <div class="flex justify-end">
             <div class="max-w-xl w-full sm:w-auto">
               <div class="relative bubble-right rounded-2xl p-4 card border border-emerald-200 bg-emerald-50">
-                <div class="text-slate-900 font-semibold break-words">${body || "—"}</div>
+                <div class="text-slate-900 font-semibold break-words">${body}</div>
                 <div class="mt-3 flex items-center justify-end gap-2 text-xs text-slate-500">
                   <span class="mono">${when}</span>
                   <span class="badge px-2 py-0.5 rounded-full bg-white text-emerald-700 font-extrabold">${t.user}</span>
@@ -580,6 +585,9 @@
         showError("API_BASE not set. Paste your Apps Script Web App URL inside index.html (API_BASE).");
         return;
       }
+
+      // ✅ Do not load unless code submitted
+      if (!currentCode) return;
 
       showError("");
 
@@ -612,6 +620,7 @@
 
       currentCode = cleaned;
       setQueryParam("code", cleaned);
+      setGate(false);
       load();
     }
 
@@ -627,13 +636,19 @@
       styleLangButtons(lang);
 
       const code = (qs("code") || "").trim();
-      if (!code || !/^\d+$/.test(code)) {
-        currentCode = "";
-        promptChangeCode();
-      } else {
+
+      // ✅ NEW behavior:
+      // - If URL has valid code, load.
+      // - If not, keep page gated (no auto prompt), user must click Change code.
+      if (code && /^\d+$/.test(code)) {
         currentCode = code;
         document.getElementById("ticketCode").textContent = code;
+        setGate(false);
         load();
+      } else {
+        currentCode = "";
+        setGate(true);
+        // keep everything as default — no auto prompt
       }
 
       setInterval(() => {
