--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <input id="gateInput"
             inputmode="numeric"
             autocomplete="one-time-code"
-            placeholder="625"
+            placeholder="xxxx"
             class="mt-2 w-full rounded-xl border border-slate-200 bg-white px-4 py-3 text-slate-900 font-semibold mono focus:outline-none focus:ring-2 focus:ring-indigo-200"
           />
           <div id="gateError" class="hidden mt-3 rounded-xl border border-red-200 bg-red-50 px-4 py-3 text-sm text-red-700 font-semibold"></div>
